# minicurso-siac

./: 01_aula.py  02_aula.py  03_aula.py  README.md  ecommerce.sqlite3  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
