[project]
name = "aula-langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.3",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-cli[inmem]>=0.4.26",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
]
